--- a/index.html
+++ b/index.html
@@ -3,50 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scientific Calculator </title>
+    <title>Advanced Scientific Calculator</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="display" placeholder="0" disabled>
-        <div class="buttons">
-            <div>
-            <button class="operators" id="operator1">(</button>
-            <button class="operators" id="operator2">)</button>
-            <button class="operators" id =operator3>%</button>
-            <button class="operators" id="operator4">&#xf7</button>
+        <div class="calc-header">
+            <button class="mode-btn" id="historyBtn">
+                <i class="fas fa-history"></i>
+            </button>
+            <button class="mode-btn" id="degRad">DEG</button>
+            <button class="mode-btn" id="togglebutton">
+                <i class="fas fa-calculator"></i>
+            </button>
+        </div>
+        
+        <div class="calc-container">
+            <div class="history-panel" id="historyPanel">
+                <div class="history-header">
+                    <h3>History</h3>
+                    <button class="clear-history" id="clearHistory">
+                        <i class="fas fa-trash"></i>
+                    </button>
+                </div>
+                <div class="history-list" id="historyList"></div>
             </div>
-            <div>
-            <button class="numbutton">7</button>
-            <button class="numbutton">8</button>
-            <button class="numbutton">9</button>
-            <button class="operators" id="operator5">x</button>
-        </div>
-        <div>
-            <button class="numbutton">4</button>
-            <button class="numbutton">5</button>
-            <button class="numbutton">6</button>
-            <button class="operators" id =operator6>+</button>
-        </div>
-        <div>
-            <button class="numbutton">1</button>
-            <button class="numbutton">2</button>
-            <button class="numbutton">3</button>
-            <button class="operators" id="operator7">-</button>
-        </div>
-        <div>
-            <button  id="togglebutton"><i class="fa-regular fa-circle-right"></i></button>
-            <button class="numbutton">0</button>
-            <button class="clear">AC</button>
-            <button class="equal">=</button>
-        </div>
+
+            <div class="main-calc">
+                <div class="display-container">
+                    <div class="expression" id="expressionDisplay"></div>
+                    <input type="text" id="display" placeholder="0" disabled>
+                </div>
+
+                <div class="scientific-buttons" style="display: none;">
+                    <div class="button-row">
+                        <button class="sci-btn" data-sci="sin">sin</button>
+                        <button class="sci-btn" data-sci="cos">cos</button>
+                        <button class="sci-btn" data-sci="tan">tan</button>
+                        <button class="sci-btn" data-sci="log">log</button>
+                    </div>
+                    <div class="button-row">
+                        <button class="sci-btn" data-sci="sqrt">√</button>
+                        <button class="sci-btn" data-sci="pow">x<sup>y</sup></button>
+                        <button class="sci-btn" data-sci="pi">π</button>
+                        <button class="sci-btn" data-sci="e">e</button>
+                    </div>
+                </div>
+
+                <div class="buttons">
+                    <div class="button-row">
+                        <button class="clear">AC</button>
+                        <button class="delete">DEL</button>
+                        <button class="operators">%</button>
+                        <button class="operators">÷</button>
+                    </div>
+                    <div class="button-row">
+                        <button class="numbutton">7</button>
+                        <button class="numbutton">8</button>
+                        <button class="numbutton">9</button>
+                        <button class="operators">×</button>
+                    </div>
+                    <div class="button-row">
+                        <button class="numbutton">4</button>
+                        <button class="numbutton">5</button>
+                        <button class="numbutton">6</button>
+                        <button class="operators">−</button>
+                    </div>
+                    <div class="button-row">
+                        <button class="numbutton">1</button>
+                        <button class="numbutton">2</button>
+                        <button class="numbutton">3</button>
+                        <button class="operators">+</button>
+                    </div>
+                    <div class="button-row">
+                        <button class="numbutton">0</button>
+                        <button class="numbutton">.</button>
+                        <button class="operators">(</button>
+                        <button class="equal">=</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <!--javascript-->
     <script src="script.js"></script>
 </body>
 </html>
