--- a/index.html
+++ b/index.html
@@ -58,32 +58,35 @@
                     <div class="button-row">
                         <button class="clear">AC</button>
                         <button class="delete">DEL</button>
-                        <button class="operators">%</button>
-                        <button class="operators">÷</button>
+                        <button class="operators">(</button>
+                        <button class="operators">)</button>
                     </div>
                     <div class="button-row">
                         <button class="numbutton">7</button>
                         <button class="numbutton">8</button>
                         <button class="numbutton">9</button>
-                        <button class="operators">×</button>
+                        <button class="operators">÷</button>
                     </div>
                     <div class="button-row">
                         <button class="numbutton">4</button>
                         <button class="numbutton">5</button>
                         <button class="numbutton">6</button>
-                        <button class="operators">−</button>
+                        <button class="operators">×</button>
                     </div>
                     <div class="button-row">
                         <button class="numbutton">1</button>
                         <button class="numbutton">2</button>
                         <button class="numbutton">3</button>
-                        <button class="operators">+</button>
+                        <button class="operators">−</button>
                     </div>
                     <div class="button-row">
                         <button class="numbutton">0</button>
                         <button class="numbutton">.</button>
-                        <button class="operators">(</button>
-                        <button class="equal">=</button>
+                        <button class="operators">%</button>
+                        <button class="operators">+</button>
+                    </div>
+                    <div class="button-row">
+                        <button class="equal" id="equalBtn">=</button>
                     </div>
                 </div>
             </div>
